# dnscli

./: .gitignore  .vimrc  CMakeLists.txt  README.md
lib/: CMakeLists.txt  cli.c  dns.c  dns.h  mdns.c  mdns.h  udp.c  udp.h
src/: main.c
